@@ -7,6 +7,13 @@
 #pragma GCC diagnostic ignored "-Wdeprecated-declarations"
 #pragma clang diagnostic ignored "-Wdeprecated-declarations"
 
+#if PyObjC_BUILD_RELEASE >= 1011
+ /* The SDK for OSX 10.12 no longer includes QuickTime headers
+  * and that cause problems when using MacPython toolbox glue.
+  */
+  #undef USE_TOOLBOX_OBJECT_GLUE
+#endif
+
 
 #if USE_TOOLBOX_OBJECT_GLUE
 #include "pymactoolbox.h"
